platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/probe.exams-curated-exam01-v1.exams-exam01-next_character/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/probe.exams-curated-exam01-v1.exams-exam01-next_character/submission/next_character.c: In function 'next_character':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/probe.exams-curated-exam01-v1.exams-exam01-next_character/submission/next_character.c:12:1: error: control reaches end of non-void function [-Werror=return-type]
   12 | }
      | ^
cc1: all warnings being treated as errors
